--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "node-schedule":"^1.2.3",
     "md5":"^2.2.1",
     "redis":"^2.8.0",
-    "sync":"^0.2.5"
+    "sync":"^0.2.5",
+    "axios": "^0.17.1"
   }
 }
